--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "Frontend for CryptoChat",
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
+    "jsencrypt": "^3.0.0-beta.1",
     "socket.io": "^2.0.4"
   }
 }
