--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "crypto-js": "^3.1.9-1",
-    "jsencrypt": "^3.0.0-beta.1",
+    "node-rsa": "^0.4.2",
     "socket.io": "^2.0.4"
   }
 }
