--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "crypto-js": "^3.1.9-1",
     "moment": "^2.22.1",
     "node-rsa": "^0.4.2",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "vue": "^2.5.16"
   }
 }
